# Interfaces_WinAPI

LoadFileDll/: LoadFile.c  LoadFileDll.cbp  LoadFileDll.depend  LoadFileDll.layout
Text_Editor/: CMakeLists.txt  LoadFile.h  Menu.h  Model.c  Model.h  Text_Editor.cbp  Text_Editor.depend  Text_Editor.layout  Viewer.c  Viewer.h  WindowData.h  bigFile1.txt  main.c  test.txt
